--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
+          cd khitma
           npm i
           npm run build:prod
       - uses: FirebaseExtended/action-hosting-deploy@v0
