styling + khitma grid

--- a/khitma/package.json
+++ b/khitma/package.json
@@ -24,11 +24,11 @@
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
+    "firebase": "^7.0 || ^8.0",
     "ngx-google-analytics": "^11.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "firebase": "^7.0 || ^8.0"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/architect": "0.1101.1",
