--- a/khitma/package.json
+++ b/khitma/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
+    "@angular/service-worker": "~11.1.0",
     "firebase": "^7.0 || ^8.0",
     "ngx-google-analytics": "^11.1.0",
     "rxjs": "~6.6.0",
