--- a/khitma/angular.json
+++ b/khitma/angular.json
@@ -30,7 +30,9 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/_variables.scss"
+
             ],
             "scripts": []
           },
