--- a/khitma/angular.json
+++ b/khitma/angular.json
@@ -26,13 +26,13 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/manifest.webmanifest"
+              "src/manifest.webmanifest",
+              "src/.well-known/assetlinks.json"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss",
               "src/_variables.scss"
-
             ],
             "scripts": []
           },
