--- a/khitma/angular.json
+++ b/khitma/angular.json
@@ -28,7 +28,8 @@
               "src/assets",
               "src/manifest.webmanifest",
               "src/.well-known/assetlinks.json",
-              "src/apple-app-site-association"
+              "src/apple-app-site-association",
+              "src/robots.txt"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
