--- a/firebase.json
+++ b/firebase.json
@@ -5,12 +5,23 @@
   },
   "hosting": {
     "public": "khitma/dist/khitma",
+    "headers": [
+      {
+        "source": "/.well-known/apple-app-site-association",
+        "headers": [
+          {
+            "key": "Content-Type",
+            "value": "application/json"
+          }
+        ]
+      }
+    ],
+    "appAssociation": "NONE",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ],
-    "appAssociation": "AUTO",
     "rewrites": [
       {
         "source": "/dl/**",
