--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,45 @@
+// {
+//     // Use IntelliSense to learn about possible attributes.
+//     // Hover to view descriptions of existing attributes.
+//     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+//     "version": "0.2.0",
+//     "configurations": [
+//         {
+//             "type": "pwa-chrome",
+//             "request": "launch",
+//             "name": "Launch Chrome against localhost",
+//             "url": "http://localhost:4200",
+//             "webRoot": "${workspaceFolder}"
+//         }
+//     ]
+// }
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        // Based on: https://github.com/microsoft/vscode-recipes/tree/master/Angular-CLI
         {
-            "type": "pwa-chrome",
+            "name": "Launch ng serve & Chrome",
+            "type": "chrome",
+            // "runtimeExecutable": "/usr/bin/chromium-browser",
+            // "runtimeArgs": [
+            //   "--new-window",
+            //   "-user-data-dir=\"/${workspaceFolder}/DevProfile\"",
+            //   "--remote-debugging-port=9222",
+            //   "--disable-background-networking"
+            // ],
             "request": "launch",
-            "name": "Launch Chrome against localhost",
+            "preLaunchTask": "npm: start",
             "url": "http://localhost:4200",
-            "webRoot": "${workspaceFolder}"
-        }
+            // Note: The ./client directory
+            "webRoot": "${workspaceFolder}/khitma",
+            "sourceMaps": true,
+            "sourceMapPathOverrides": {
+                "webpack:/*": "${webRoot}/*",
+                "/./*": "${webRoot}/*",
+                "/src/*": "${webRoot}/*",
+                "/*": "*",
+                "/./~/*": "${webRoot}/node_modules/*"
+            }
+        },
     ]
 }
