--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@angular/common": "~12.2.7",
     "@angular/compiler": "~12.2.7",
     "@angular/core": "~12.2.7",
-    "@angular/fire": "^6.1.4",
+    "@angular/fire": "^7.0.4",
     "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~12.2.7",
     "@angular/material": "^12.2.7",
@@ -25,24 +25,26 @@
     "@angular/platform-browser-dynamic": "~12.2.7",
     "@angular/router": "~12.2.7",
     "@angular/service-worker": "~12.2.7",
-    "firebase": "^7.0 || ^8.0",
+    "firebase": "^9.0.0",
     "ngx-google-analytics": "^11.1.0",
+    "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "0.1202.7",
+    "@angular-devkit/architect": "^0.1200.0",
     "@angular-devkit/build-angular": "~12.2.7",
     "@angular/cli": "^12.2.7",
     "@angular/compiler-cli": "~12.2.7",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "firebase-tools": "^9.1.0",
+    "firebase-tools": "^9.0.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
+    "jsonc-parser": "^3.0.0",
     "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
