social login, create user table & service

--- a/angular.json
+++ b/angular.json
@@ -87,6 +87,10 @@
               "browserTarget": "khitma:build:development"
             }
           },
+          "options": {
+            "browserTarget": "khitma:build",
+            "ssl": true
+          },
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
