--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "~12.2.7",
     "@angular/router": "~12.2.7",
     "@angular/service-worker": "~12.2.7",
+    "angularx-social-login": "^4.0.1",
     "firebase": "^9.0.0",
     "ngx-google-analytics": "^11.1.0",
     "rxfire": "^6.0.0",
