--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,20 +9,17 @@
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
     "importHelpers": true,
     "target": "es2015",
     "module": "es2020",
-    "lib": [
-      "es2018",
-      "dom"
-    ],
+    "lib": ["es2018", "dom"],
     "paths": {
-      "tslib": [
-        "path/to/node_modules/tslib/tslib.d.ts"
-      ]
-    },
+      "tslib": ["path/to/node_modules/tslib/tslib.d.ts"],
+      "@environments/*": ["./src/environments/*"],
+      "@app/*": ["./src/app/*"]
+    }
   },
-  "include": [
-    "./src/assets/translate/en.ts"
-  ]
+  "include": ["./src/assets/translate/en.ts"]
 }
