--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
-    "strict": true,
+    // "strict": true,
     "forceConsistentCasingInFileNames": true,
     "importHelpers": true,
     "target": "es2015",
